# labellasso

./: .gitignore  README.md  bokeh_lasso.py  env.yaml  labellasso.py  pyproject.toml  test.csv  test_labelled.csv
docs/: README.md
src/labellasso/: __about__.py  __init__.py  __main__.py  app.py  bokeh_lasso.py  data.py  plot.py  report_lasso.py
src/labellasso/cli/: __init__.py
tests/: conftest.py  test_data.py  test_plot.py
