[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "labellasso"
dynamic = ["version"]
description = 'A simple data-point labelling tool using scatterplot lasso'
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "Henry Watkins", email = "h.watkins@ucl.ac.uk" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "click",
  "pandas",
  "bokeh",
]

[project.urls]
Documentation = "https://github.com/henrywatkins/labellasso#readme"
Issues = "https://github.com/henrywatkins/labellasso/issues"
Source = "https://github.com/henrywatkins/labellasso"

[project.scripts]
labellasso = "labellasso.cli:labellasso"

[tool.hatch.version]
path = "src/labellasso/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
fmt = "black . ; isort ."