[project]
name = "labellasso"
version = "0.1.0"
description = 'A simple data-point labelling tool using scatterplot lasso'
authors = [
    { name = "Henry Watkins", email = "h.watkins@ucl.ac.uk" }
]
dependencies = [
    "click>=8.0.0",
    "pandas>=1.3.0",
    "bokeh>=2.4.0",
    "isort>=6.0.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.urls]
Documentation = "https://github.com/henrywatkins/labellasso#readme"
Issues = "https://github.com/henrywatkins/labellasso/issues"
Source = "https://github.com/henrywatkins/labellasso"

[project.scripts]
labellasso = "labellasso.cli:labellasso"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.0.249",
    "black>=25.1.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/labellasso"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.ruff]
target-version = "py38"
line-length = 88
select = ["E", "F", "I", "N", "T", "RUF"]
ignore = []
fixable = ["A", "B", "C", "D", "E", "F", "I", "N", "T", "RUF"]
exclude = [
    ".git",
    ".ruff_cache",
    ".venv",
    "__pypackages__",
    "build",
    "dist",
]

[tool.ruff.isort]
known-first-party = ["labellasso"]
